re PR tree-optimization/27151 (ICE with -ftree-vectorize with mixed types)

2006-05-06   Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/27151
	* tree-vect-transform.c (vectorizable_condition): Punt on
	values that have a different type than the condition.

	* gcc.dg/vect/pr27151.c: New testcase.

From-SVN: r113581